Fix scrolling behind overlays
Fixes #192

--- a/src/less/modals.less
+++ b/src/less/modals.less
@@ -23,7 +23,11 @@
     &.modal-overlay-visible {
         visibility: visible;
         opacity: 1;
+        html.ios & {
+            .scrollable();
+        }
     }
+
 }
 .popup-overlay {
     z-index: 10200;
